Tab layout completed

--- a/app/src/main/res/layout/activity_login_.xml
+++ b/app/src/main/res/layout/activity_login_.xml
@@ -4,7 +4,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#fff"
     android:padding="3dp"
     tools:context=".Login_Activity">
 
@@ -25,6 +24,7 @@
         android:layout_marginTop="60dp"
         android:autofillHints="@string/edtLoginUserNameHint"
         android:ems="10"
+        android:fontFamily="sans-serif"
         android:hint="@string/edtLoginUserNameHint"
         android:inputType="textPersonName"
         android:rotationX="-3"
@@ -55,6 +55,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="60dp"
         android:background="@color/primaryColor"
+        android:fadingEdge="horizontal|vertical"
         android:padding="15dp"
         android:text="@string/btnLoginText"
         android:textSize="30sp"
@@ -96,7 +97,7 @@
         android:layout_marginStart="25dp"
         android:layout_marginTop="15dp"
         android:text="@string/txtLoginResetPasswordText"
-        android:textColor="#0929F6"
+        android:textColor="#89faf6"
         android:textSize="18sp"
         android:textStyle="bold|italic"
         app:layout_constraintEnd_toEndOf="parent"
@@ -111,7 +112,7 @@
         android:layout_marginStart="125dp"
         android:layout_marginTop="24dp"
         android:text="@string/txtLoginTransferToSignup"
-        android:textColor="#0929F6"
+        android:textColor="#89faf6"
         android:textSize="18sp"
         android:textStyle="bold|italic"
         app:layout_constraintEnd_toEndOf="parent"
