Share Picture Tab Implemented

--- a/app/src/main/res/layout/fragment_share_picture__tab.xml
+++ b/app/src/main/res/layout/fragment_share_picture__tab.xml
@@ -1,9 +1,50 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".SharePicture_Tab">
 
 
+    <ImageView
+        android:id="@+id/imgShareImage"
+        android:layout_width="0dp"
+        android:layout_height="370dp"
+        android:layout_marginStart="4dp"
+        android:layout_marginTop="4dp"
+        android:layout_marginEnd="4dp"
+        android:contentDescription="@string/imgShareImageDescription"
+        android:src="@drawable/sharepicture"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <EditText
+        android:id="@+id/edtShareImage"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:ems="10"
+        android:gravity="start|top"
+        android:hint="@string/edtImageDescriptionHint"
+        android:inputType="textMultiLine"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.497"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/imgShareImage"
+        android:autofillHints="@string/edtImageDescriptionHint"/>
+
+    <Button
+        android:id="@+id/btnShareImage"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
+        android:background="@color/primaryDarkColor"
+        android:text="@string/btnShareImageText"
+        android:textColor="@color/primaryLightColor"
+        android:textSize="36sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/edtShareImage" />
 </androidx.constraintlayout.widget.ConstraintLayout>
